History
=======

Version 0.8.4 - Unreleased
--------------------------

Version 0.8.3 - 2008-12-03
--------------------------

- fixes issue with unicodeerrors on statistics page because of bad Job-messages. 
  Described in https://bugs.launchpad.net/singing-dancing/+bug/299950
  [tmog]

- Part of Czech translation.  
  [naro]

- Improved block structure and added classes and ids. Replaced paras with divs. 
  These changes will impact existing CSS.  [russf]

- Use of ``Template().substitute`` will be fatal on any un-escaped where $ will 
  occur - like on all recent news items :( safe_substitute behaves properly in 
  these cirumstances.  [russf]

- Some refactoring in order to allow for more customized subscription forms.
  [nouri]

- Added french translation.

- Made new job-view ``browser/jobs.pt`` translateable, rebuilt pot file and 
  updated german translation.  [saily]

Version 0.8.2 - 2008-11-17
--------------------------

- Fixed a bug in ``HTMLComposer`` where unsubscribe_url could not be substituted
  by template engine because of double dollars in variable name.  [saily]

Version 0.8.1 - 2008-11-14
--------------------------

- Small refactoring of tests to allow for reuse of test infrastructure
  in third party tests. [nouri]

Version 0.8.0 - 2008-11-12
--------------------------

- Added bouncing support: The new utility view
  ``@@dancing.utils/handle_bounce`` takes a list of addresses and
  marks subscriptions as pending when it receives more than two bounce
  notifications.  This has the effect that no more messages are sent
  to that subscription, while the subscription is still present in the
  database. [nouri]

- Added caching to composer rendering.  Caching is done based on
  ``_vars`` and collected items.  Notice that ``composer._vars`` has
  been split into two; ``_vars`` and ``_subscription_vars``. The
  latter containing variables that are likely to be unique to the
  subscription, and the former those that are likely shared across