@@ -40,4 +40,17 @@
 
   </genericsetup:upgradeSteps>
 
+  <genericsetup:upgradeSteps
+     profile="collective.dancing:default"
+     source="0.4b1"
+     destination="0.8.4">
+    
+    <genericsetup:upgradeStep
+       handler=".upgrades.upgrade_to_singing_compositequeue"
+       title="Use collective.singing.queue.CompositeQueue for message queueing"
+       description=""
+       />
+
+  </genericsetup:upgradeSteps>
+
 </configure>
